--- a/index.html
+++ b/index.html
@@ -1,28 +1,222 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Maquette Responsive + Animations</title>
+    <style>
+      /* Reset & base */
+      * {
+        margin: 0;
+        padding: 0;
+        box-sizing: border-box;
+      }
 
-<head>
-    <meta charset="UTF-8">
-    <title>Test smartphone CSS</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-</head>
+      body {
+        font-family: "Segoe UI", sans-serif;
+        background: linear-gradient(to right, #f0f4f8, #d9e2ec);
+        color: #333;
+        line-height: 1.6;
+      }
 
-<body >
-    <div class="smart">
-        <div id="dettaglio">
-            <div id="sensore"></div>
-            <div id="microfono"></div>
+      a {
+        text-decoration: none;
+        color: inherit;
+      }
+
+      /* HEADER */
+      header {
+        background: #1f2937;
+        color: white;
+        padding: 1.5rem 2rem;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        flex-wrap: wrap;
+      }
+
+      header h1 {
+        font-size: 1.8rem;
+      }
+
+      nav a {
+        margin-left: 1rem;
+        color: white;
+        font-weight: 500;
+        transition: color 0.3s;
+      }
+
+      nav a:hover {
+        color: #38bdf8;
+      }
+
+      /* CONTAINER */
+      .container {
+        max-width: 1100px;
+        margin: 2rem auto;
+        padding: 0 1rem;
+      }
+
+      /* ANIMATIONS */
+      @keyframes fadeUp {
+        from {
+          opacity: 0;
+          transform: translateY(20px);
+        }
+        to {
+          opacity: 1;
+          transform: translateY(0);
+        }
+      }
+
+      .fade-in {
+        animation: fadeUp 1s ease forwards;
+      }
+
+      /* GRID CARDS */
+      .grid {
+        display: grid;
+        grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+        gap: 1.5rem;
+        margin: 2rem 0;
+      }
+
+      .card {
+        background: white;
+        padding: 1.5rem;
+        border-radius: 12px;
+        box-shadow: 0 8px 20px rgba(0, 0, 0, 0.05);
+        transition: transform 0.3s ease, box-shadow 0.3s ease;
+      }
+
+      .card:hover {
+        transform: translateY(-10px);
+        box-shadow: 0 12px 24px rgba(0, 0, 0, 0.1);
+      }
+
+      .card h3 {
+        margin-bottom: 0.5rem;
+        color: #1e40af;
+      }
+
+      /* FORMULAIRE */
+      form {
+        background: white;
+        padding: 2rem;
+        border-radius: 12px;
+        box-shadow: 0 8px 20px rgba(0, 0, 0, 0.05);
+        max-width: 700px;
+        margin: 0 auto 3rem;
+      }
+
+      form input[type="text"],
+      form input[type="email"],
+      form textarea,
+      form button {
+        width: 100%;
+        padding: 0.75rem 1rem;
+        margin-bottom: 1rem;
+        border: 1px solid #ccc;
+        border-radius: 8px;
+        font-size: 1rem;
+        transition: border-color 0.3s;
+      }
+
+      form input:focus,
+      form textarea:focus {
+        border-color: #38bdf8;
+        outline: none;
+      }
+
+      form button {
+        background: #3b82f6;
+        color: white;
+        font-weight: bold;
+        cursor: pointer;
+        border: none;
+        transition: background 0.3s;
+      }
+
+      form button:hover {
+        background: #2563eb;
+      }
+
+      /* CHECKBOX CUSTOM */
+      .checkbox-group {
+        display: flex;
+        align-items: center;
+        gap: 0.5em;
+        margin-bottom: 1em;
+      }
+
+      .checkbox-group label {
+        font-size: 0.95rem;
+      }
+
+      .ctus {
+        margin-bottom: 1em;
+      }
+
+      /* RESPONSIVE HEADER NAV */
+      @media (max-width: 640px) {
+        header {
+          flex-direction: column;
+          align-items: flex-start;
+        }
+
+        nav {
+          margin-top: 1rem;
+        }
+      }
+    </style>
+  </head>
+  <body>
+    <header>
+      <h1>Mon Site Moderne</h1>
+      <nav>
+        <a href="#">Accueil</a>
+        <a href="#">Services</a>
+        <a href="#">Contact</a>
+      </nav>
+    </header>
+
+    <div class="container">
+      <section class="fade-in">
+        <h2>Nos Services</h2>
+        <div class="grid">
+          <div class="card">
+            <h3>Responsive Design</h3>
+            <p>Affichage adaptable à tous les écrans (PC, mobile, tablette).</p>
+          </div>
+          <div class="card">
+            <h3>Animations CSS</h3>
+            <p>Animations d'apparition, transitions et effets au survol.</p>
+          </div>
+          <div class="card">
+            <h3>Formulaires stylisés</h3>
+            <p>Champs personnalisés, mise en page moderne, interactions.</p>
+          </div>
         </div>
-        <div id="acenzione-button"></div>
-        <div id="volume-su"></div>
-        <div id="volume-giu"></div>
-        <div id="schermo">
-            <div class="frame-posizione">
+      </section>
 
-            </div>
-        </div>
+      <section class="fade-in">
+        <form>
+          <div>
+            <h2 class="ctus">Contactez-nous</h2>
+            <input type="text" placeholder="Votre nom" required />
+            <input type="email" placeholder="Votre email" required />
+            <textarea rows="5" placeholder="Votre message" required></textarea>
+          </div>
 
-    </body>
-
+          <div class="checkbox-group">
+            <input type="checkbox" id="consentement" required />
+            <label for="consentement"
+              >J’accepte les conditions générales d’utilisation</label
+            >
+          </div>
+          <button type="submit">Envoyer le message</button>
+        </form>
+      </section>
+    </div>
+  </body>
 </html>
